Separated data-cleaning.ipynb into two files. Added function to amzn_reviews_cleaner_funcs.py to add top 10 features to df with idf vectors

--- a/src/dev-data-cleaning.ipynb
+++ b/src/dev-data-cleaning.ipynb
@@ -7,7 +7,7 @@
     "<hr>\n",
     "# Data Cleaning\n",
     "\n",
-    "Notebook for creating and testing the cleaning process for our dataset.\n",
+    "Notebook for creating the cleaning process for our dataset.\n",
     "<hr>\n",
     "## Setup"
    ]
@@ -468,12 +468,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
