Changed Spark Cluster service role specified in pyspark_emr.ipy from default to s3_only

--- a/src/test-data-cleaning.ipynb
+++ b/src/test-data-cleaning.ipynb
@@ -40,33 +40,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+--------+-------+--------------------+-----------+--------------+--------------------+--------------------+--------------+\n",
-      "|      asin| helpful|overall|          reviewText| reviewTime|    reviewerID|        reviewerName|             summary|unixReviewTime|\n",
-      "+----------+--------+-------+--------------------+-----------+--------------+--------------------+--------------------+--------------+\n",
-      "|1384719342|  [0, 0]|    5.0|Not much to write...|02 28, 2014|A2IBPI20UZIR0U|cassandra tu \"Yea...|                good|    1393545600|\n",
-      "|1384719342|[13, 14]|    5.0|The product does ...|03 16, 2013|A14VAT5EAX3D9S|                Jake|                Jake|    1363392000|\n",
-      "|1384719342|  [1, 1]|    5.0|The primary job o...|08 28, 2013|A195EZSQDW3E21|Rick Bennette \"Ri...|It Does The Job Well|    1377648000|\n",
-      "+----------+--------+-------+--------------------+-----------+--------------+--------------------+--------------------+--------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create spark session\n",
-    "spark = SparkSession(sc)\n",
-    "\n",
+    "spark = SparkSession(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# get dataframe\n",
     "# specify s3 as sourc with s3a://\n",
-    "df = spark.read.json(\"s3a://amazon-review-data/reviews_Musical_Instruments_5.json.gz\")\n",
-    "df.show(3)"
+    "df = spark.read.json(\"s3a://amazon-review-data/reviews_Musical_Instruments_5.json.gz\")"
    ]
   },
   {
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -242,6 +234,43 @@
    ],
    "source": [
     "df_raw_tokens.select(\"raw_tokens\").show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- asin: string (nullable = true)\n",
+      " |-- helpful: array (nullable = true)\n",
+      " |    |-- element: long (containsNull = true)\n",
+      " |-- overall: double (nullable = true)\n",
+      " |-- reviewText: string (nullable = true)\n",
+      " |-- reviewTime: string (nullable = true)\n",
+      " |-- reviewerID: string (nullable = true)\n",
+      " |-- reviewerName: string (nullable = true)\n",
+      " |-- summary: string (nullable = true)\n",
+      " |-- unixReviewTime: long (nullable = true)\n",
+      " |-- cleanText: string (nullable = true)\n",
+      " |-- raw_tokens: array (nullable = true)\n",
+      " |    |-- element: string (containsNull = true)\n",
+      " |-- tokens: array (nullable = true)\n",
+      " |    |-- element: string (containsNull = true)\n",
+      " |-- tf_vector: vector (nullable = true)\n",
+      " |-- idf_vector: vector (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tfidf.printSchema()"
    ]
   },
   {
