--- a/src/archive/test-data-cleaning.ipynb
+++ b/src/archive/test-data-cleaning.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -274,22 +274,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr>\n",
+    "### Analyze row"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------+-------+--------------------+-----------+--------------+--------------------+-------+--------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "|      asin|helpful|overall|          reviewText| reviewTime|    reviewerID|        reviewerName|summary|unixReviewTime|           cleanText|          raw_tokens|              tokens|           tf_vector|          idf_vector|        top_features|\n",
+      "+----------+-------+-------+--------------------+-----------+--------------+--------------------+-------+--------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "|1384719342| [0, 0]|    5.0|Not much to write...|02 28, 2014|A2IBPI20UZIR0U|cassandra tu \"Yea...|   good|    1393545600|Not much to write...|[not, much, to, w...|[much, write, , e...|(21502,[0,2,8,10,...|(21502,[0,2,8,10,...|[supposed, record...|\n",
+      "+----------+-------+-------+--------------------+-----------+--------------+--------------------+-------+--------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_features.show(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "test_row = df_features.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'[supposed, recordings, honestly, crisp, despite, prices, write, filters, lowest, pricing]'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_row[\"top_features\"]"
+   ]
   },
   {
    "cell_type": "code",
